--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,16 @@
 .App {
   display: flex;
   justify-content: center;
+  background-color: #f0f0f0;
+  height: 100vh;
+  width: 100vw;
+}
+
+@font-face {
+  font-family: "Inter Black";
+  src: url("./assets/Fonts/Inter/static/Inter-Black.ttf");
+}
+@font-face {
+  font-family: "Inter Medium";
+  src: url("./assets/Fonts/Inter/static/Inter-Medium.ttf");
 }
