--- a/src/pages/Report/index.css
+++ b/src/pages/Report/index.css
@@ -6,7 +6,7 @@
 
 .report-body {
   display: flex;
-  justify-content: space-between;
+  justify-content: start;
   flex: 1;
   flex-direction: column;
   margin: 25px;
@@ -17,12 +17,13 @@
   padding: 22px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
   border: none;
-  border-radius: 1.5rem;
+  border-radius: 1.2rem;
   text-align: start;
   font-family: "Inter Medium";
   font-size: 1.2rem;
   color: #565656;
   background-color: white;
+  margin-bottom: 20px;
   transition: 0.2s;
 }
 .report-label:active {
