--- a/src/pages/Confirmation/index.css
+++ b/src/pages/Confirmation/index.css
@@ -11,31 +11,36 @@
   flex-direction: column;
   justify-content: center;
   text-align: center;
+  height: 100%;
+  flex: 1;
 }
 
 .confirmation-body {
   display: flex;
   flex-direction: column;
-  background-color: blue;
-  flex: 1;
+  justify-content: flex-end;
+  align-items: center;
+  flex: 1.5;
 }
 
 .confirmation-title {
   font-family: "Inter Black";
-  font-size: 2.5rem;
+  font-size: 2.75rem;
   margin: 0px;
+  margin-top: 25px;
   color: white;
 }
 
 .confirmation-subtitle {
   font-family: "Inter Medium";
-  font-size: 1rem;
+  font-size: 1.25rem;
   color: white;
 }
 
 .confirmation-footer {
   display: flex;
-  justify-self: flex-end;
+  padding: 25px;
+  flex: 1;
 }
 
 .confirmation-button {
@@ -45,16 +50,22 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 2rem;
+  align-self: flex-end;
+  border-radius: 1.5rem;
   box-shadow: 0px 4px 23px rgba(0, 0, 0, 0.36);
   /* text */
   font-family: "Inter Black";
   text-decoration: none;
-  font-size: 2rem;
+  font-size: 1.5rem;
   color: #3e3aff;
   transition: 0.2s;
 }
 
 .confirmation-button:active {
   box-shadow: none;
+  background-color: #3e3aff;
+  color: white;
+  border: solid;
+  border-width: 2px;
+  border-color: white;
 }
