--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,12 @@
   justify-content: center;
   background-color: #f0f0f0;
   height: 100vh;
-  width: 100vw;
+}
+
+.App-content {
+  display: flex;
+  width: 100%;
+  max-width: 800px;
 }
 
 @font-face {
