--- a/src/pages/Confirmation/index.css
+++ b/src/pages/Confirmation/index.css
@@ -27,7 +27,7 @@
   font-family: "Inter Black";
   font-size: 2.75rem;
   margin: 0px;
-  margin-top: 25px;
+  margin-top: 1rem;
   color: white;
 }
 
@@ -39,7 +39,7 @@
 
 .confirmation-footer {
   display: flex;
-  padding: 25px;
+  padding: 1rem;
   flex: 1;
 }
 
@@ -59,6 +59,7 @@
   font-size: 1.5rem;
   color: #3e3aff;
   transition: 0.2s;
+  margin-bottom: 1rem;
 }
 
 .confirmation-button:active {
