--- a/src/pages/FAQ/index.css
+++ b/src/pages/FAQ/index.css
@@ -1,7 +1,8 @@
 .faq-root {
   display: flex;
   flex-direction: column;
-  padding: 25px;
+  padding: 1rem;
+  width: 100%;
 }
 .faq-content {
   display: flex;
@@ -15,6 +16,14 @@
   font-size: 1.2rem;
 }
 
+.faq-question {
+  font-style: italic;
+}
+
+.faq-answer {
+  font-style: none;
+}
+
 .faq-button {
   padding: 16px;
   display: flex;
@@ -26,25 +35,9 @@
   font-family: "Inter Black";
   text-decoration: none;
   font-size: 1.5rem;
-  /*  */
   background-color: #3e3aff;
   color: white;
-
-  /* 
-  padding: 16px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 1.5rem;
-  box-shadow: 0px 4px 23px rgba(0, 0, 0, 0.36);
-  font-family: "Inter Black";
-  text-decoration: none;
-  font-size: 1.5rem;
-
-  transition: 0.2s;
-  width: 100%;
-  align-self: flex-end;
-  */
+  margin-bottom: 1rem;
 }
 
 .faq-button:active {
