--- a/src/pages/Home/index.css
+++ b/src/pages/Home/index.css
@@ -2,7 +2,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  padding: 25px;
+  padding: 1rem;
 }
 
 .home-body {
@@ -27,6 +27,7 @@
   font-size: 2rem;
   color: white;
   transition: 0.2s;
+  text-align: center;
 }
 
 .home-primary-button:active {
