--- a/src/pages/Report/index.css
+++ b/src/pages/Report/index.css
@@ -2,12 +2,12 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  padding: 25px;
+  padding: 1rem;
 }
 
 .report-body {
   display: flex;
-  justify-content: start;
+  justify-content: center;
   flex: 1;
   flex-direction: column;
 }
@@ -18,7 +18,7 @@
 }
 
 .report-label {
-  padding: 22px;
+  padding: 1.25rem;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
   border: none;
   border-radius: 1rem;
@@ -27,7 +27,7 @@
   font-size: 1.5rem;
   color: #565656;
   background-color: white;
-  margin-bottom: 20px;
+  margin-bottom: 1rem;
   transition: 0.1s;
 }
 .report-label-active {
@@ -43,11 +43,12 @@
   /* flex: 1; */
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 1rem;
 }
 
 .report-primary-button {
   background-color: #3e3aff;
-  padding: 14px;
+  padding: 16px;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -59,11 +60,12 @@
   text-decoration: none;
   font-size: 1.5rem;
   color: white;
+  border: none;
 }
 
 .report-secondary-button {
   background-color: white;
-  padding: 14px;
+  padding: 16px;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -75,5 +77,5 @@
   text-decoration: none;
   font-size: 1.5rem;
   color: #565656;
-  margin-right: 25px;
+  margin-right: 1rem;
 }
