--- a/src/pages/Report/index.css
+++ b/src/pages/Report/index.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   padding: 1rem;
+  /* background-color: blue; */
 }
 
 .report-body {
@@ -38,6 +39,12 @@
   font-family: "Inter Black";
   color: white;
   font-size: 1.5rem;
+}
+
+.report-label-other {
+  z-index: 1;
+  position: relative;
+  box-shadow: 0 0 0 max(100vh, 100vw) rgba(0, 0, 0, 0.3);
 }
 
 .report-icon-container {
@@ -96,4 +103,12 @@
   font-size: 1.5rem;
   color: #565656;
   margin-right: 1rem;
+}
+
+.report-button-disabled {
+  cursor: default;
+}
+
+.report-react-mic {
+  display: none;
 }
