--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: center;
   background-color: #f0f0f0;
+  /* background-color: rgb(45, 45, 45); */
   height: 100vh;
 }
 
